Добавление ссылки на репозиторий

--- a/week2/pr2/index.html
+++ b/week2/pr2/index.html
@@ -28,7 +28,7 @@
 <body>
     <button id="textSize">Размер 30px</button><br><br>
     <p>Текст</p>
-    <div class="round"></div><br><br>
+    <div class="round"></div><br><br>c
     <input type="text" id="inp" placeholder="Введите число">
     <script>
         const ts = document.getElementById('textSize');
