--- a/week2/pr2/index.html
+++ b/week2/pr2/index.html
@@ -8,7 +8,7 @@
         body {
             padding: 50px 150px;
             font-size: 21px;
-            background-color: rgb(215, 215, 215);
+            background-color: rgb(222, 222, 222);
         }
         .bigText {
             font-size: 30px;
@@ -28,7 +28,7 @@
 <body>
     <button id="textSize">Размер 30px</button><br><br>
     <p>Текст</p>
-    <div class="round"></div><br><br>c
+    <div class="round"></div><br><br>
     <input type="text" id="inp" placeholder="Введите число">
     <script>
         const ts = document.getElementById('textSize');
