Silly minor changes

--- a/week2/pr12/index.html
+++ b/week2/pr12/index.html
@@ -4,7 +4,7 @@
 <title>Иерархическая структура</title>
 <style>
     body {
-        padding: 50px 100px;
+        padding: 0 100px;
     }
   .tree ul {
     list-style-type: none;
@@ -97,6 +97,7 @@
     </ul>
   </div>
 
+  <h2>Сортировка списка</h2>
   <ul id="myList">
         <li>Вишня</li>
         <li>Яблоко</li>
